Refractored a lot of the skill logic, react logic API to an asynchronous callbacks so that attacks can be seen one after another. Got Rid of the process reaction single pipeline now logics just need to return the actual effect damage instead of -1 and etc.